# Guess-Game-Smart-Contract

./: README.md  cabal.project  guessname.cabal
app/: guess.hs
scripts/: collect-guess.sh  make-guess.sh
